cabal-version: >=1.10
name:          Cabal
version:       3.7.0.0
copyright:     2003-2021, Cabal Development Team (see AUTHORS file)
license:       BSD3
license-file:  LICENSE
author:        Cabal Development Team <cabal-devel@haskell.org>
maintainer:    cabal-devel@haskell.org
homepage:      http://www.haskell.org/cabal/
bug-reports:   https://github.com/haskell/cabal/issues
synopsis:      A framework for packaging Haskell software
description:
  The Haskell Common Architecture for Building Applications and
  Libraries: a framework defining a common interface for authors to more
  easily build their Haskell applications in a portable way.
  .
  The Haskell Cabal is part of a larger infrastructure for distributing,
  organizing, and cataloging Haskell libraries and tools.
category:       Distribution
build-type:     Simple
-- If we use a new Cabal feature, this needs to be changed to Custom so
-- we can bootstrap.

extra-source-files:
  README.md ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/haskell/cabal/
  subdir:   Cabal

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
    Cabal-syntax >= 3.7    && < 3.8,
    array      >= 0.4.0.1  && < 0.6,
    base       >= 4.6      && < 5,
    bytestring >= 0.10.0.0 && < 0.12,
    containers >= 0.5.0.0  && < 0.7,
    deepseq    >= 1.3.0.1  && < 1.5,
    directory  >= 1.2      && < 1.4,
    filepath   >= 1.3.0.1  && < 1.5,
    pretty     >= 1.1.1    && < 1.2,
    process    >= 1.1.0.2  && < 1.7,
    time       >= 1.4.0.1  && < 1.13

  if os(windows)
    build-depends: Win32 >= 2.3.0.0 && < 2.13
  else
    build-depends: unix  >= 2.6.0.0 && < 2.8

  ghc-options: -Wall -fno-ignore-asserts -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances

    if impl(ghc <8.8)
      ghc-options: -Wnoncanonical-monadfail-instances

  if !impl(ghc >= 8.0)
    -- at least one of lib:Cabal's dependency (i.e. `parsec`)
    -- already depends on `fail` and `semigroups` transitively
    build-depends: fail == 4.9.*, semigroups >= 0.18.3 && < 0.21

  if !impl(ghc >= 7.10)
    build-depends: void >= 0.7.3 && < 0.8

  if !impl(ghc >= 7.8)
    -- semigroups depends on tagged.
    build-depends:  tagged >=0.8.6 && <0.9, bytestring-builder >= 0.10.8 && <0.11

  exposed-modules:
    Distribution.Backpack.Configure
    Distribution.Backpack.ComponentsGraph
    Distribution.Backpack.ConfiguredComponent
    Distribution.Backpack.DescribeUnitId
    Distribution.Backpack.FullUnitId
    Distribution.Backpack.LinkedComponent
    Distribution.Backpack.ModSubst
    Distribution.Backpack.ModuleShape
    Distribution.Backpack.PreModuleShape
    Distribution.Utils.IOData
    Distribution.Utils.LogProgress
    Distribution.Utils.MapAccum
    Distribution.Compat.CreatePipe
    Distribution.Compat.Directory
    Distribution.Compat.Environment
    Distribution.Compat.FilePath
    Distribution.Compat.Internal.TempFile
    Distribution.Compat.ResponseFile
    Distribution.Compat.Prelude.Internal
    Distribution.Compat.Process
    Distribution.Compat.Stack
    Distribution.Compat.Time
    Distribution.Make
    Distribution.PackageDescription.Check
    Distribution.ReadE
    Distribution.Simple
    Distribution.Simple.Bench
    Distribution.Simple.Build
    Distribution.Simple.Build.Macros
    Distribution.Simple.Build.PathsModule
    Distribution.Simple.BuildPaths
    Distribution.Simple.BuildTarget
    Distribution.Simple.BuildToolDepends
    Distribution.Simple.CCompiler
    Distribution.Simple.Command
    Distribution.Simple.Compiler
    Distribution.Simple.Configure
    Distribution.Simple.Flag
    Distribution.Simple.GHC
    Distribution.Simple.GHCJS
    Distribution.Simple.Haddock
    Distribution.Simple.Glob
    Distribution.Simple.HaskellSuite
    Distribution.Simple.Hpc
    Distribution.Simple.Install
    Distribution.Simple.InstallDirs
    Distribution.Simple.InstallDirs.Internal
    Distribution.Simple.LocalBuildInfo
    Distribution.Simple.PackageDescription
    Distribution.Simple.PackageIndex
    Distribution.Simple.PreProcess
    Distribution.Simple.PreProcess.Unlit
    Distribution.Simple.Program
    Distribution.Simple.Program.Ar
    Distribution.Simple.Program.Builtin
    Distribution.Simple.Program.Db
    Distribution.Simple.Program.Find
    Distribution.Simple.Program.GHC
    Distribution.Simple.Program.HcPkg
    Distribution.Simple.Program.Hpc
    Distribution.Simple.Program.Internal
    Distribution.Simple.Program.Ld
    Distribution.Simple.Program.ResponseFile
    Distribution.Simple.Program.Run
    Distribution.Simple.Program.Script
    Distribution.Simple.Program.Strip
    Distribution.Simple.Program.Types
    Distribution.Simple.Register
    Distribution.Simple.Setup
    Distribution.Simple.ShowBuildInfo
    Distribution.Simple.SrcDist
    Distribution.Simple.Test
    Distribution.Simple.Test.ExeV10
    Distribution.Simple.Test.LibV09
    Distribution.Simple.Test.Log
    Distribution.Simple.UHC
    Distribution.Simple.UserHooks
    Distribution.Simple.Utils
    Distribution.TestSuite
    Distribution.Types.AnnotatedId
    Distribution.Types.ComponentInclude
    Distribution.Types.DumpBuildInfo
    Distribution.Types.PackageName.Magic
    Distribution.Types.ComponentLocalBuildInfo
    Distribution.Types.LocalBuildInfo
    Distribution.Types.TargetInfo
    Distribution.Types.GivenComponent
    Distribution.Utils.Json
    Distribution.Utils.NubList
    Distribution.Utils.Progress
    Distribution.Verbosity
    Distribution.Verbosity.Internal

  -- Parsec parser-related modules
  build-depends:
    -- transformers-0.4.0.0 doesn't have record syntax e.g. for Identity
    -- See also https://github.com/ekmett/transformers-compat/issues/35
    transformers (>= 0.3      && < 0.4) || (>=0.4.1.0 && <0.6),
    mtl           >= 2.1      && < 2.3,
    text         (>= 1.2.3.0  && < 1.3) || (>= 2.0 && < 2.1),
    parsec        >= 3.1.13.0 && < 3.2

  other-modules:
    Distribution.Backpack.PreExistingComponent
    Distribution.Backpack.ReadyComponent
    Distribution.Backpack.MixLink
    Distribution.Backpack.ModuleScope
    Distribution.Backpack.UnifyM
    Distribution.Backpack.Id
    Distribution.Utils.UnionFind
    Distribution.Compat.Async
    Distribution.Compat.CopyFile
    Distribution.Compat.GetShortPathName
    Distribution.Compat.SnocList
    Distribution.GetOpt
    Distribution.Lex
    Distribution.Simple.Build.Macros.Z
    Distribution.Simple.Build.PathsModule.Z
    Distribution.Simple.GHC.EnvironmentParser
    Distribution.Simple.GHC.Internal
    Distribution.Simple.GHC.ImplInfo
    Distribution.ZinzaPrelude
    Paths_Cabal

  other-extensions:
    BangPatterns
    CPP
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImplicitParams
    KindSignatures
    LambdaCase
    NondecreasingIndentation
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    Trustworthy
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  if impl(ghc >= 7.11)
    other-extensions: PatternSynonyms
