cabal-version: 2.2
name:          cabal-bootstrap-gen
version:       0

executable cabal-bootstrap-gen
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
    , aeson                  ^>=1.5.2.0  || ^>=2.0.3.0 || ^>=2.1.0.0 || ^>=2.2.0.0
    , base                    >=4.12.0.0 && < 5
    , bytestring              >=0.10.8.2 && <0.13
    , Cabal                  ^>=3.14.1.0 || ^>=3.16.0.0
    , Cabal-syntax           ^>=3.14.1.0 || ^>=3.16.0.0
        -- For the release process, we need the last *two* Cabal-syntax
        -- versions here: one to make CI green when release Cabal-syntax is
        -- not yet on Hackage and we are bumping versions.  The second for
        -- when Cabal-syntax has been actually uploaded to Hackage and we
        -- rerun `make bootstrap-jsons`.
    , cabal-install-parsers  ^>=0.6
    , cabal-plan             ^>=0.7.0.0
    -- upper bound is conjectural
    , containers              >=0.6.0.1  && <0.10
    , text                    >=1.2.3.0  && <3
    , topograph              ^>=1.0.0.1
    , transformers           ^>=0.5.6.2  || ^>=0.6.0.4
