cabal-version: 2.2
name:          buildinfo-reference-generator
version:       0

executable buildinfo-reference-generator
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
    , base        ^>=4.12
    , Cabal
    , containers
    , pretty
    , zinza       ^>=0.2
