cabal-version: 2.2
name:          buildinfo-reference-generator
version:       0

executable buildinfo-reference-generator
  default-language: GHC2021
  hs-source-dirs:   src
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
    , base             >=4.17 && <4.24
    , Cabal
    , Cabal-described
    , containers
    , pretty
    , zinza            ^>=0.2
